Changed links to Holly Margaret

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
 <p>As a part of my <strong>Writing with Digital Technology</strong> class at the University of Minnesota, Twin Cities, I worked collaboratively with my classmates and an artist community called Serpentina Arts whose goal is to give <strong>Latinx Artists</strong>, who are often under-represented, a platform for exhibition. I spent the fall semester of 2021 partnered with a Latinx Artist and together we developed an artist biography meant to be used in any way the artist saw fit. Here is a link to the <a href="https://www.facebook.com/pages/category/Artist/Serpentina-Arts-123709977640263/">Serpentina Artist Community</a> page.</p>
 <p>This site explains the process by which we arrived at a finished artist biography by covering the following:</p>
 <ul>
-<li><a href="https://pages.github.umn.edu/lesm0013/hologirl_99/project-overview/">Project overview</a></li>
-<li><a href="https://pages.github.umn.edu/lesm0013/hologirl_99/interview-process/">Interview process</a></li>
-<li><a href="https://pages.github.umn.edu/lesm0013/hologirl_99/drafting-bio/">Drafting bio</a></li>
+  <li><a href="https://hollymargaret.github.io/mkdocs/project-overview/">Project Overview</a></li>
+<li><a href="https://hollymargaret.github.io/mkdocs/interview-process/">Interview process</a></li>
+<li><a href="https://hollymargaret.github.io/mkdocs/drafting-bio/">Drafting bio</a></li>
 </ul>
 <h2 id="about-serpentina-arts">About Serpentina Arts</h2>
 <p>Serpentina Arts is a robust roster of Minnesota Latinx visual artists who have a record of creative presence in Minnesota, are innovative participants in coalition-building, and are diverse in age, artistic media, race, genders, sexualities, educational backgrounds, and cultural heritage. The programming values knowledge, reciprocity, and accountability among the participants.</p>
