--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 
                 
                 <h1 id="serpentina-arts-project">Serpentina Arts Project</h1>
-<p>As a part of my <strong>Writing with Digital Technology</strong> class at the University of Minnesota, Twin Cities, I worked collaboratively with my classmates and an artist community called Serpentina Arts whose goal is to give <strong>Latinx Artists</strong>, who are often under-represented, a platform for exhibition. I spent the fall semester of 2021 partnered with a Latinx Artist and together we developed an artist biography meant to be used in any way the artist saw fit. Here is a link to the <a href="https://www.facebook.com/pages/category/Artist/Serpentina-Arts-123709977640263/">Serpentina Artist Community</a> page.</p>
+<p>As a part of my <strong>Writing with Digital Technology</strong> class at the University of Minnesota, Twin Cities, I worked collaboratively with my classmates and an artist community called Serpentina Arts whose goal is to give <strong>Latinx Artists</strong> a platform for exhibition. I spent the fall semester of 2021 partnered with a Latinx Artist and together we developed an artist biography meant to be used in any way the artist saw fit. Here is a link to the <a href="https://www.facebook.com/pages/category/Artist/Serpentina-Arts-123709977640263/">Serpentina Artist Community</a> page.</p>
 <p>This site explains the process by which we arrived at a finished artist biography by covering the following:</p>
 <ul>
   <li><a href="https://hollymargaret.github.io/mkdocs/project-overview/">Project Overview</a></li>
