--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
                 
                 
                 <h1 id="serpentina-arts-project">Serpentina Arts Project</h1>
-              <p>As a part of my <strong>Writing with Digital Technology</strong> class at the University of Minnesota, Twin Cities, we worked with the <strong>Serpentina Arts</strong> community, whose goal is to give Latinx artists a platform for exhibition, to create a unique an artist bio for each artist. The artist then can use the artist bio in any way they see fit.  Here is a link to the <a href="https://www.facebook.com/pages/category/Artist/Serpentina-Arts-123709977640263/">Serpentina Artist Community</a> page.</p>
-<p>This site explains the process by which we arrived at a finished artist biography by covering the following:</p>
+              <p>As a part of my <strong>Writing with Digital Technology</strong> class at the University of Minnesota, Twin Cities, we worked with the <strong>Serpentina Arts</strong> community, whose goal is to give Latinx artists a platform for exhibition, to create a unique an artist bio for each artist. The artist can use the artist bio in any way they see fit.  Here is a link to the <a href="https://www.facebook.com/pages/category/Artist/Serpentina-Arts-123709977640263/">Serpentina Artist Community</a> page.</p>
+<p>This site explains how we created and delivered a finished artist biography.</p>
 <ul>
   <li><a href="https://hollymargaret.github.io/mkdocs/project-overview/">Project Overview</a></li>
-<li><a href="https://hollymargaret.github.io/mkdocs/interview-process/">Interview process</a></li>
-<li><a href="https://hollymargaret.github.io/mkdocs/drafting-bio/">Drafting bio</a></li>
+<li><a href="https://hollymargaret.github.io/mkdocs/interview-process/">Interview Process</a></li>
+<li><a href="https://hollymargaret.github.io/mkdocs/drafting-bio/">Drafting the Bio</a></li>
 </ul>
 <h2 id="about-serpentina-arts">About Serpentina Arts</h2>
 <p>Serpentina Arts is a robust roster of Minnesota Latinx visual artists who have a record of creative presence in Minnesota, are innovative participants in coalition-building, and are diverse in age, artistic media, race, genders, sexualities, educational backgrounds, and cultural heritage. The programming values knowledge, reciprocity, and accountability among the participants.</p>
