--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 
                 <h1 id="serpentina-arts-project">Serpentina Arts Project</h1>
               <p>As a part of my <strong>Writing with Digital Technology</strong> class at the University of Minnesota, Twin Cities, we worked with the <strong>Serpentina Arts</strong> community, whose goal is to give Latinx artists a platform for exhibition, to create a unique an artist bio for each artist. The artist can use the artist bio in any way they see fit.  Here is a link to the <a href="https://www.facebook.com/pages/category/Artist/Serpentina-Arts-123709977640263/">Serpentina Artist Community</a> page.</p>
-<p>This site explains how we created and delivered a finished artist biography.</p>
+<p>This site explains how we created and delivered a finished artist biography in three steps:</p>
 <ul>
   <li><a href="https://hollymargaret.github.io/mkdocs/project-overview/">Project Overview</a></li>
 <li><a href="https://hollymargaret.github.io/mkdocs/interview-process/">Interview Process</a></li>
