--- a/project-overview/index.html
+++ b/project-overview/index.html
@@ -318,7 +318,7 @@
                 
                 
                 <h1 id="project-overview">Project Overview</h1>
-<p>The Serpentina Arts community's goal is to give under-represented <strong>Latinx</strong> artists a platform to exhibit their artwork. The University collaborated with Serpentina arts so that any member who wanted a professionally written artist bio could have one written by a Technical Communications student. </p>
+<p>Serpentina Arts' goal is to give under-represented <strong>Latinx</strong> artists a platform to exhibit their artwork. Students of the University collaborated with Serpentina Arts so that any member who wanted a professionally written artist bio could have one written by a Technical Writing and Communications student.</p>
 <h2 id="project-steps">Project Steps</h2>
 <p>Over the course of the fall semester 2021 our Writing with Digital Technology class worked in pairs (or individually) to:</p>
 <ol>
