--- a/interview-process/index.html
+++ b/interview-process/index.html
@@ -346,12 +346,12 @@
                 
                 
                 <h1 id="interview-process">Interview Process</h1>
-<p>The following is the process by which we conducted our interview for the bio.</p>
+<p>The following page outlines the process we used to conduct our interview in gathering information about our artist.</p>
 <h3 id="conducting-the-interview">Conducting the Interview</h3>
-<p>with Covid-19 precautions in effect, the interview was not a traditional in-person interview. We decided to conduct the interviews via a Zoom video conferencing application to be safe. </p>
+<p>With Covid-19 precautions in effect, we did not conduct a traditional in-person interview. Instead, we decided to conduct the interviews via a Zoom video conferencing call in order to be safe.</p>
 <h3 id="recording-the-interview">Recording the Interview</h3>
-<p>It was important to get permission from the interviewee before we actually recorded the conversation. Once permission was obtained, we then made sure that the artist understood they did not have to answer any question that they didn't want to. </p>
-<p>Familiarity with the Zoom application was important as recording properly could save one from an embarrassing do-over.</p>
+<p>It was important to get permission from the interviewee before we actually recorded the conversation. Once permission was obtained, we made sure that the artist understood that they did not have to answer any question they didn't want to. </p>
+<p>Familiarity with the Zoom application was important as knowing how to record the meeting could save time and limit lost information because it wasn't written down.</p>
 <h3 id="transcribing-the-interview">Transcribing the Interview</h3>
 <p>The Zoom application allows you to record and auto transcribe the conversation. This was one benefit of conducting the interview via Zoom over in-person. Once the interview was complete, the transcription of the audio was to be edited for accuracy. Viewing the recording and comparing it against the transcription helped to fix any errors in which the Zoom auto transcribe was inaccurate. </p>
 <p><img alt="Zoom Interview" src="../onlineinterview.png" /></p>
