--- a/interview-process/index.html
+++ b/interview-process/index.html
@@ -346,9 +346,9 @@
                 
                 
                 <h1 id="interview-process">Interview Process</h1>
-<p>The following page outlines the process we used to conduct our interview in gathering information about our artist.</p>
+<p>The following page outlines the process we used to conduct our interview.</p>
 <h3 id="conducting-the-interview">Conducting the Interview</h3>
-<p>With Covid-19 precautions in effect, we did not conduct a traditional in-person interview. Instead, we decided to conduct the interviews via a Zoom video conferencing call in order to be safe.</p>
+<p>With Covid-19 precautions in effect, we did not conduct a traditional in-person interview. Instead, we decided to conduct the interviews via a Zoom video conferencing call, in order to be safe.</p>
 <h3 id="recording-the-interview">Recording the Interview</h3>
 <p>It was important to get permission from the interviewee before we actually recorded the conversation. Once permission was obtained, we made sure that the artist understood that they did not have to answer any question they didn't want to. </p>
 <p>Familiarity with the Zoom application was important as knowing how to record the meeting could save time and limit lost information because it wasn't written down.</p>
